--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@types/jest": "^26.0.8",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-treebeard": "^3.2.4",
     "tailwindcss": "^1.6.0",
     "typescript": "^3.9.7"
   },
